Change the return type of getDevices to Collection
Bug: Not applicable
Test: Not applicable
Change-Id: I653b7ac65b8c07001f1033268c2237e7f781a4f6

GitOrigin-RevId: 46730b98ccd4923b2f5cfd9d3cc238f6229e9d6d